# warehouse_man_api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  requirements.txt
api/: pyproject.toml  requirements.txt
api/migrations/: env.py
api/migrations/versions/: 89a87cf18176_init_db.py
api/src/: __init__.py  celery_task.py  config.py  errors.py  logging.py  mail.py  middleware.py
api/src/db/: main.py  models.py  redis.py
api/src/items/: routes.py  schemas.py  services.py
api/src/notes/: routes.py  schemas.py  services.py
api/src/tags/: routes.py  schemas.py  services.py
api/src/userauth/: dependencies.py  routes.py  schemas.py  services.py  utils.py
